--- a/cSharp/cSharp.csproj
+++ b/cSharp/cSharp.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="morelinq" Version="3.2.0" />
+    <PackageReference Include="yc.quickgraph" Version="3.7.4" />
   </ItemGroup>
 
 </Project>
